--- a/mango_web.yml
+++ b/mango_web.yml
@@ -25,3 +25,6 @@ View::TT:
     - __path_to(root/templates/tt)__
   TEMPLATE_EXTENSION:
   WRAPPER: wrapper
+Model::User:
+  connection_info:
+    - dbi:SQLite:data/mango.db
