Moved templates out of root and changed view config
git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1654 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/mango_setup.yml
+++ b/mango_setup.yml
@@ -19,6 +19,6 @@ session:
   storage:  __path_to(sessions)__
 View::TT:
   INCLUDE_PATH:
-    - __path_to(root/templates/tt)__
+    - __path_to(templates/tt)__
   TEMPLATE_EXTENSION:
   WRAPPER: wrapper
