--- a/mango_web.yml
+++ b/mango_web.yml
@@ -6,7 +6,7 @@ session:
   storage:  __path_to(sessions)__
 View::TT:
   INCLUDE_PATH:
-    - __path_to(root/templates/tt)__
+    - __path_to(templates/tt)__
   TEMPLATE_EXTENSION:
   WRAPPER: wrapper
 Model::User:
