Renamed all User to Users Added Iterator
git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1656 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/mango_web.yml
+++ b/mango_web.yml
@@ -9,6 +9,6 @@ View::TT:
     - __path_to(templates/tt)__
   TEMPLATE_EXTENSION:
   WRAPPER: wrapper
-Model::User:
+Model::Users:
   connection_info:
     - dbi:SQLite:data/mango.db
