Added profile support to Auth Store Added PRofiles class, provider, model, etc.
git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1665 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/mango_web.yml
+++ b/mango_web.yml
@@ -12,3 +12,12 @@ View::TT:
 Model::Users:
   connection_info:
     - dbi:SQLite:data/mango.db
+Model::Roles:
+  connection_info:
+    - dbi:SQLite:data/mango.db
+Model::Profiles:
+  connection_info:
+    - dbi:SQLite:data/mango.db
+authentication:
+  mango:
+    stuff: foo
