Added Carts model Hooked User up to Cart model (c.user.cart)
git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1670 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/mango_web.yml
+++ b/mango_web.yml
@@ -18,6 +18,9 @@ Model::Roles:
 Model::Profiles:
   connection_info:
     - dbi:SQLite:data/mango.db
+Model::Carts:
+  connection_info:
+    - dbi:SQLite:data/mango.db
 authentication:
   mango:
     stuff: foo
