--- a/mango_web.yml
+++ b/mango_web.yml
@@ -4,9 +4,20 @@ site:
   id: web
 session:
   storage:  __path_to(sessions)__
-View::TT:
+default_view: HTML
+View::HTML:
   INCLUDE_PATH:
-    - __path_to(templates/tt)__
+    - __path_to(templates/tt/html)__
+  TEMPLATE_EXTENSION:
+  WRAPPER: wrapper
+View::XHTML:
+  INCLUDE_PATH:
+    - __path_to(templates/tt/xhtml)__
+  TEMPLATE_EXTENSION:
+  WRAPPER: wrapper
+View::Text:
+  INCLUDE_PATH:
+    - __path_to(templates/tt/text)__
   TEMPLATE_EXTENSION:
   WRAPPER: wrapper
 Model::Users:
@@ -16,6 +27,9 @@ Model::Roles:
   connection_info:
     - dbi:SQLite:data/mango.db
 Model::Profiles:
+  connection_info:
+    - dbi:SQLite:data/mango.db
+Model::Products:
   connection_info:
     - dbi:SQLite:data/mango.db
 Model::Carts:
