Added rough Tags: /tags/tag1/tag2/ browse tester. Products can create/update/delete tags in admin
git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1763 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/root/forms/admin/products/edit.yml
+++ b/root/forms/admin/products/edit.yml
@@ -1,7 +1,7 @@
 ---
 name: products_edit
 method: POST
-javascript: 0
+javascript: 1
 stylesheet: 1
 sticky: 1
 submit: LABEL_UPDATE
@@ -42,5 +42,13 @@ fields:
         - NOT_BLANK
         - DECIMAL, 9, 2
   - created:
+      type: text
       size: 20
       disabled: 1
+  - tags:
+      type: textarea
+  - attributes:
+      type: text
+      size: 50
+      maxlength: 281
+      growable: 1
