git-svn-id: http://svn.icantfocus.com/CPAN/Mango/trunk@1782 52a70e3a-55ec-0310-b14e-7917f69ecacc

--- a/mango_web.yml
+++ b/mango_web.yml
@@ -32,6 +32,9 @@ Model::Profiles:
 Model::Products:
   connection_info:
     - dbi:SQLite:data/mango.db
+Model::Tags:
+  connection_info:
+    - dbi:SQLite:data/mango.db
 Model::Carts:
   connection_info:
     - dbi:SQLite:data/mango.db
